--- a/videa.html
+++ b/videa.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>V&S Videa</title>
-    <link rel="icon" type="image/x-icon" href="/web/img/V&S logo_circle.png">
+    <link rel="icon" type="image/x-icon" href="./docs/web/img/V&S logo_circle.png.png">
     <style>
-        @import url(/web/css/style.css);
+        @import url(./docs/web/css/style.css);
     </style>
 </head>
 <body>
@@ -19,12 +19,12 @@
         <!-- Logo které vede na YT kanál -->
     <div>
         <a href="https://www.youtube.com/@Voky_spol">
-        <img class="logo" src="/web/img/V&S logo_circle.png" alt="V&S logo">
+        <img class="logo" src="./docs/web/img/V&S logo_circle.png" alt="V&S logo">
     </a>
     </div>
     <nav>
         <ul>
-            <li><a href="/web/html/index.html">O nás</a></li>
+            <li><a href="./docs/web/html/index.html">O nás</a></li>
             <li class="selected">Videa</li>
         </ul>
     </nav>
