--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>V&S</title>
-    <link rel="icon" type="image/x-icon" href="/web/img/V&S logo_circle.png">
+    <link rel="icon" type="image/x-icon" href="./docs/web/img/V&S logo_circle.png">
     <style>
         @import url(/web/css/style.css);
     </style>
