--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>V&S</title>
     <link rel="icon" type="image/x-icon" href="./docs/web/img/V&S logo_circle.png">
     <style>
-        @import url(/web/css/style.css);
+        @import url(./docs/web/css/style.css);
     </style>
 </head>
 <body>
@@ -19,13 +19,13 @@
     <!-- Logo které vede na YT kanál -->
     <div>
         <a href="https://www.youtube.com/@Voky_spol">
-        <img class="logo" src="/web/img/V&S logo_circle.png" alt="V&S logo">
+        <img class="logo" src="./docs/web/img/V&S logo_circle.png" alt="V&S logo">
     </a>
     </div>
     <nav>
         <ul>
             <li class="selected">O nás</li>
-            <li><a href="/web/html/videa.html">Videa</a></li>
+            <li><a href="./videa.html">Videa</a></li>
         </ul>
     </nav>
     
