--- a/videa.html
+++ b/videa.html
@@ -24,7 +24,7 @@
     </div>
     <nav>
         <ul>
-            <li><a href="./docs/web/html/index.html">O nás</a></li>
+            <li><a href="./index.html">O nás</a></li>
             <li class="selected">Videa</li>
         </ul>
     </nav>
